style.css
/* ... */
#header-thumbnails>* {
    padding-right: 16px;
}

#info-block {
    padding-top: 5vh;
}

#privacy-policy_terms-of-service {
    display: flex;
    flex-wrap: wrap;
    flex: 0 1 150px;
}

#privacy-policy_terms-of-service>* {
    padding-right: 10px;
}


/** Project picture **/

.header-img {
    height: 500px;
    overflow: hidden;
    object-fit: cover;
    width: 100%;
    /*object-position: 50% 50%; 
  animation-duration: 2s;
  animation-iteration-count: 1;
  animation-timing-function: ease-out;
  animation-fill-mode: forwards;
  animation-name: pic_resize;
  */
}

@keyframes pic_resize {
    0% {
        object-position: 10% 40%;
    }

    100% {
        object-position: 80% 60%;
    }
}

#artist-portrait {
    overflow: hidden;
    object-fit: cover;
    width: 100%;
}


/*--------------------------------------------------------- Paragraph & Font Styles ---------------------------------------------------------*/


/* Remove webkit margins */

h1,
h2,
h3,
h4,
h5,
h6,
p,
a {
    margin: 0px;
    overflow-wrap: anywhere;
}

h1 {
    font-family: "degular-display", "Verdana", sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 72px;
    line-height: 86px;
    display: flex;
    align-items: center;
    letter-spacing: 0.5px;
    color: var(--black);
}

h2 {
    font-family: "degular-display", "Verdana", sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 56px;
    line-height: 67px;
    display: flex;
    align-items: center;
    letter-spacing: 0.5px;
    color: var(--black);
}

h3 {
    font-family: "degular-display", "Verdana", sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 48px;
    line-height: 58px;
    display: flex;
    align-items: center;
    letter-spacing: 0.5px;
    color: var(--black);
}

h4 {
    font-family: "degular-display", "Verdana", sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 32px;
    line-height: 38px;
    display: flex;
    align-items: center;
    letter-spacing: 0.5px;
    color: var(--primary);
}

h5 {
    font-family: "degular-display", "Verdana", sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 24px;
    line-height: 28px;
    display: flex;
    align-items: center;
    letter-spacing: 1.5px;
    text-transform: uppercase;
    color: var(--black);
}

h6 {
    font-family: "degular-display", "Verdana", sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 14px;
    line-height: 16px;
    display: flex;
    align-items: center;
    letter-spacing: 2.5px;
    text-transform: uppercase;
    color: var(--black);
}

.body_large {
    font-family: "Inter", "Verdana", sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 27px;
    align-items: center;
    color: var(--black);
}

.body_standard {
    font-family: "Inter", "Verdana", sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
    align-items: center;
    color: var(--black);
}

.body_small {
    font-family: "Inter", "Verdana", sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 21px;
    display: flex;
    align-items: center;
    color: var(--black);
}

.caption {
    font-family: "Inter", "Verdana", sans-serif;
    font-style: italic;
    font-weight: 400;
    font-size: 12px;
    line-height: 14px;
    display: flex;
    align-items: center;
    letter-spacing: 0.5px;
    color: var(--black);
    margin: 0;
}

a {
    transition: 1s;
}

a .colored-link {
    color: var(--secondary-shade1) !important;
}

a:hover {
    color: var(--secondary-shade1) !important;
}

a:visited {
    align-items: center;
    color: var(--black);
}

.btn_l {
    font-family: "Inter", "Verdana", sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 16px;
    line-height: 28px;
    display: flex;
    align-items: center;
    letter-spacing: 0.5px;
    text-transform: uppercase;
}

.btn_s {
    font-family: "Inter", "Verdana", sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 24px;
    display: flex;
    align-items: center;
    letter-spacing: 0.5px;
    text-transform: uppercase;
}

.content {
    background-color: none;
}

.background-image {
    background-image: url(assets/rectangle_2.svg);
    background-repeat: no-repeat;
    background-position-x: 102%;
    background-position-y: 0%;
    background-size: auto;
}

.logo-large {
    background-color: var(--white);
    padding: 5%;
}


/* Different opacity for german and english text */

.textEN {
    color: var(--secondary-shade1);
}


/*--------------------------------------------------------- Component styles ---------------------------------------------------------*/


/** Buttons **/

button {
    cursor: pointer;
    position: static;
    z-index: 3;
}

.btn_primary {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 10px 20px;
    border: 1px solid var(--primary);
    color: var(--white);
    background: var(--primary);
    transition: background 1s, border 1s;
    -webkit-transition: background 1s, border 1s;
}

.btn_secondary {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 10px 20px;
    border: 1px solid var(--primary);
    color: var(--primary);
    background-color: var(--white);
    transition: border 1s, background 1s, color 1s;
    transition: border 1s, background 1s, color 1s;
}

.btn_primary:hover {
    border: 1px solid var(--secondary-beige);
    background-color: var(--white);
    color: var(--primary);
}

.btn_secondary:hover {
    border: 1px solid var(--secondary-beige);
    background-color: var(--white);
    color: var(--secondary-beige);
}


/** Icons **/

.icon {
    fill: var(--black);
    transition: .5s;
}

.icon:hover {
    fill: var(--primary-shade2);
}
/* ... */

